--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "uuid": "43b0eed3-e41b-4cb4-9f05-2f43ca611d34"
   },
   "engines": {
-    "node": ">=18.0.0 <=20.x.x",
-    "npm": ">=6.0.0"
+    "node": "20.17.0",
+    "npm": "10.8.2"
   },
   "license": "MIT"
 }
