--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/plugin-users-permissions": "4.25.9",
     "@strapi/provider-upload-cloudinary": "^4.25.10",
     "@strapi/strapi": "4.25.9",
+    "@strapi/typescript-utils": "^4.25.10",
     "better-sqlite3": "8.6.0",
     "pg": "^8.12.0",
     "pg-connection-string": "^2.6.4",
